--- a/pom.xml
+++ b/pom.xml
@@ -130,7 +130,7 @@
     <artifactId>myartifact1</artifactId>
     <version>0.1</version>
     <scope>system</scope>
-    <systemPath>/home/spark/workspace/karkinos/dependencies/BigWig.jar</systemPath>
+    <systemPath>${basedir}/dependencies/BigWig.jar</systemPath>
   </dependency>	
   
   <dependency>
@@ -138,7 +138,7 @@
     <artifactId>myartifact2</artifactId>
     <version>0.1</version>
     <scope>system</scope>
-    <systemPath>/home/spark/workspace/karkinos/dependencies/jahmm-0.6.1.jar</systemPath>
+    <systemPath>${basedir}/dependencies/jahmm-0.6.1.jar</systemPath>
   </dependency>	
   
   <dependency>
@@ -146,7 +146,7 @@
     <artifactId>myartifact3</artifactId>
     <version>0.1</version>
     <scope>system</scope>
-    <systemPath>/home/spark/workspace/karkinos/dependencies/jheatchart-0.6.jar</systemPath>
+    <systemPath>${basedir}/dependencies/jheatchart-0.6.jar</systemPath>
   </dependency>	
     
    
