--- a/build.gradle
+++ b/build.gradle
@@ -24,6 +24,11 @@ sourceSets {
             srcDirs = ['src/utils/resources']
         }
     }
+    test {
+        java {
+            srcDir 'test/main/java'
+        }
+    }
 }
 
 configurations {
@@ -42,7 +47,6 @@ dependencies {
     compile group: 'org.apache.commons', name: 'commons-math', version:'2.2'
     compile group: 'org.apache.logging.log4j', name: 'log4j-api', version:'2.0'
     compile group: 'commons-cli', name: 'commons-cli', version:'1.3'
-    compile group: 'junit', name: 'junit', version:'4.12'
     compile group: 'net.sf.opencsv', name: 'opencsv', version:'2.0'
     compile group: 'com.h2database', name: 'h2', version:'1.4.193'
     compile group: 'commons-logging', name: 'commons-logging', version:'1.2'
@@ -55,8 +59,18 @@ dependencies {
     compile group: 'org.jfree', name: 'jfreechart', version:'1.0.19'
     compile group: 'org.apache.commons', name: 'commons-math3', version:'3.6'
     compile fileTree(dir: "dependencies", include: ["*.jar"])
-    testCompile group: 'junit', name: 'junit', version: '4.12'
     utilsCompile sourceSets.test.output
+    testCompile group: 'org.junit.platform', name: 'junit-platform-commons', version: '1.3.1'
+    testCompile group: 'org.junit.platform', name: 'junit-platform-console', version: '1.3.1'
+    testCompile group: 'org.junit.platform', name: 'junit-platform-console-standalone', version: '1.3.1'
+    testCompile group: 'org.junit.platform', name: 'junit-platform-engine', version: '1.3.1'
+    testCompile group: 'org.junit.platform', name: 'junit-platform-launcher', version: '1.3.1'
+    testCompile group: 'org.junit.platform', name: 'junit-platform-runner', version: '1.3.1'
+    testCompile group: 'org.junit.platform', name: 'junit-platform-suite-api', version: '1.3.1'
+    testCompile group: 'org.junit.platform', name: 'junit-platform-surefire-provider', version: '1.3.1'
+    testCompile group: 'org.junit.jupiter', name: 'junit-jupiter-api', version: '5.3.1'
+    testCompile group: 'org.junit.jupiter', name: 'junit-jupiter-params', version: '5.3.1'
+    testRuntime group: 'org.junit.jupiter', name: 'junit-jupiter-engine', version: '5.3.1'
 }
 
 def commitHash = { ->
@@ -84,4 +98,8 @@ task uberjar(type: Jar) {
 
 task utilsJar(type: Jar) {
     from sourceSets.utils.output
+}
+
+test {
+    useJUnitPlatform()
 }
