--- a/build.gradle
+++ b/build.gradle
@@ -40,6 +40,7 @@ configurations {
     utilsCompile {
         extendsFrom compile
     }
+    testImplementation.extendsFrom compileOnly
 }
 
 dependencies {
@@ -76,6 +77,9 @@ dependencies {
     testCompile group: 'org.junit.jupiter', name: 'junit-jupiter-api', version: '5.3.1'
     testCompile group: 'org.junit.jupiter', name: 'junit-jupiter-params', version: '5.3.1'
     testRuntime group: 'org.junit.jupiter', name: 'junit-jupiter-engine', version: '5.3.1'
+    compileOnly 'systems.manifold:manifold-ext:2020.1.24'
+    testImplementation 'systems.manifold:manifold-ext-rt:2020.1.24'
+    annotationProcessor group: 'systems.manifold', name: 'manifold-ext', version: '2020.1.24'
 }
 
 def commitHash = { ->
@@ -115,4 +119,17 @@ task utilsJar(type: Jar) {
 test {
     test.finalizedBy jacocoTestReport
     useJUnitPlatform()
+}
+
+if (JavaVersion.current() != JavaVersion.VERSION_1_8 &&
+    sourceSets.main.allJava.files.any {it.name == "module-info.java"}) {
+    compileTestJava {
+        // if you DO define a module-info.java file:
+        options.compilerArgs += ['-Xplugin:Manifold', '--module-path', it.classpath.asPath]
+    }
+} else {
+    compileTestJava {
+        // If you DO NOT define a module-info.java file:
+        options.compilerArgs += ['-Xplugin:Manifold']
+    }
 }
