--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -4,20 +4,20 @@ on: [push, pull_request]
 
 jobs:
   test:
-    runs-on: ubuntu-18.04
+    runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@v3
     - name: Setup Java
-      uses: actions/setup-java@v1
+      uses: actions/setup-java@v3
       with:
+        distribution: 'corretto'
         java-version: '11'
-        architecture: x64
     - name: Grant execute permission for gradlew
       run: chmod +x gradlew
     - name: Run test
       run: ./gradlew test
     - name: Coverage Graph
-      uses: codecov/codecov-action@v1.0.13
+      uses: codecov/codecov-action@v3
       with:
         token: ${{ secrets.CODECOV_TOKEN }}
         file: "./build/reports/jacoco/test/jacocoTestReport.xml"
